kubernetes/apps/ai/hermes-agent/networkpolicy.yaml
---
# yaml-language-server: $schema=https://schemas.rzegocki.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: hermes-agent-egress-internal
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: hermes-agent
  egress:
    - toEndpoints:
        # core
        - matchLabels:
            app.kubernetes.io/name: bifrost
        - matchLabels:
            app.kubernetes.io/name: camofox
        - matchLabels:
            app.kubernetes.io/name: honcho
        - matchLabels:
            io.kubernetes.pod.namespace: default
            app.kubernetes.io/name: searxng
        # apps
        - matchLabels:
            io.kubernetes.pod.namespace: default
            app.kubernetes.io/name: firefly
    - toFQDNs:
        - matchName: imap.migadu.com
      toPorts:
        - ports:
            - port: "993"
